--- a/public/global.css
+++ b/public/global.css
@@ -6,7 +6,6 @@ body {
 	font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	font-weight: 300;
 	font-size: 1rem;
-	background-color:  white;
 }
 input {
 	width: 100%;
@@ -15,3 +14,10 @@ input {
 	outline: none;
 }
 i { max-height: 35px!important;}
+.profile-pic-small { width: 2rem; height: 2rem; object-fit: cover; border-radius: 50%;}
+
+.pofile-name {
+	display: grid;
+	grid-template-columns: 1fr 2fr; 
+	align-items: center;
+}
